*** DONE Added language FR/EN selector in options
*** DONE Original repository audio issue #12 merged
*** DONE Compilation-time option to make a portable build (it will use config from runtime dir)
*** DONE Improved qDebug() with custom message pattern with file, function, time, criticity
*** DONE Translations updates (FR)
*** DONE Debian packaging updated
* Version: 1.0
*** DONE fix random sources on windows
*** DONE Added the ability to read news from various news sources
*** DONE fixed the sound issues on the mac and hopefully maemo
*** DONE added "similar" sequences: auv4, ndb6, eish5, ...
*** DONE fix read-to-me memory issues
*** DONE [#A] Test the speed increasing settings for speed mode
*** DONE [#B] mode specific preferences
*** DONE move highscores button into the options menu
*** DONE [#B] Add a "test" button next to the frequency set spinbox
*** DONE [#A] saving in maemo on window close is broken?
*** DONE add a pause after recognition mode training before next key
*** DONE add a starting slightly slower speed to speed training
*** DONE start read-to-me at current cursor position
*** DONE [#B] icons for the home page buttons
*** DONE make the read-to-me mode be able to read each word multiple times
*** DONE make speed mode match letters ahead
* Version: 0.5.1
*** DONE A makerelease packaging script.
* Version: 0.5
*** DONE Use programmed screens instead of qtdesigner screens to get around maemo bugs
*** DONE Rewrite the letter training mode to be purely based on percentage and not time
*** DONE Add a graph widget to indicate training progress
*** DONE improve the probability for bad letters in recognition mode
***** Example case with L good letters and 1 bad one:
      + P = percent correct of the "bad" letter (eg, 50)
      + L = # of letters at O%
      + O = percent correct of the good letter (eg, 100)
      + T = target probability (eg, .5)
      + N = magic constant

***** probability calculation:
      t=(n-p)/(l*n-lo+n-p)

***** solved for N