@@ -10,6 +10,7 @@
 *** DONE Improved qDebug() with custom message pattern with file, function, time, criticity
 *** DONE Translations updates (FR)
 *** DONE Debian packaging updated
+*** DONE First quick-fix for multiple-keys entered
 * Version: 1.0
 *** DONE fix random sources on windows
 *** DONE Added the ability to read news from various news sources
